Passage du projet en SPRING BOOT

--- a/.gitignore
+++ b/.gitignore
@@ -1,109 +1,4 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/eclipse,java,maven
-# Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java,maven
-
-### Eclipse ###
-projet/.metadata
-projet/bin/
-projet/tmp/
-projet/*.tmp
-projet/*.bak
-projet/*.swp
-projet/*~.nib
-projet/local.properties
-projet/.settings/
-projet/.loadpath
-projet/.recommenders
-projet/.classpath
-projet/.project
-
-# External tool builders
-.externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
-*.launch
-
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
-
-# CDT-specific (C/C++ Development Tooling)
-projet/.cproject
-
-# CDT- autotools
-projet/.autotools
-
-# Java annotation processor (APT)
-projet/.factorypath
-
-# PDT-specific (PHP Development Tools)
-projet/.buildpath
-
-# sbteclipse plugin
-projet/.target
-
-# Tern plugin
-projet/.tern-project
-
-# TeXlipse plugin
-projet/.texlipse
-
-# STS (Spring Tool Suite)
-projet/.springBeans
-
-# Code Recommenders
-projet/.recommenders/
-
-# Annotation Processing
-projet/.apt_generated/
-projet/.apt_generated_test/
-
-# Scala IDE specific (Scala & Java development for Eclipse)
-projet/.cache-main
-projet/.scala_dependencies
-projet/.worksheet
-
-# Uncomment this line if you wish to ignore the project description file.
-# Typically, this file would be tracked if it contains build/dependency configurations:
-#.project
-
-### Eclipse Patch ###
-# Spring Boot Tooling
-projet/.sts4-cache/
-
-### Java ###
-# Compiled class file
-projet/*.class
-
-# Log file
-projet/*.log
-
-# BlueJ files
-projet/*.ctxt
-
-# Mobile Tools for Java (J2ME)
-projet/.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-### Maven ###
-projet/target/*
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-
-# End of https://www.toptal.com/developers/gitignore/api/eclipse,java,maven
+projet-registation/.classpath
+projet-registation/.project
+projet-registation/.settings/
+projet-registation/target/
