Log dans le dossier Registation dans user.home

--- a/projet-registation/src/main/resources/application.yml
+++ b/projet-registation/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 logging:
   file:
-    name: ${user.home}/app-registation.log
+    name: ${user.home}/Registation/app-registation.log
   level:
     fr:
       cda: trace
