Test unitaire EvenementDao Create, ReadById, ReadByType, close (2)

--- a/projet-registation/src/main/resources/application.yml
+++ b/projet-registation/src/main/resources/application.yml
@@ -3,7 +3,7 @@ logging:
     name: ${user.home}/Registation/app-registation.log
   level:
     fr:
-      cda: trace
+      afpa: trace
     root: info
 
 spring:
