--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.0",
     "bootstrap": "^4.5.2",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
