Clean utilisation angular material

--- a/pfr-registation-frontend/pfr-registation-angular/angular.json
+++ b/pfr-registation-frontend/pfr-registation-angular/angular.json
@@ -24,14 +24,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/font-awesome/css/font-awesome.css"                          
+              "src/custom-theme.scss",
+              "src/styles.css"            
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -124,6 +120,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "pfr-registation-angular"
 }
