--- a/pfr-registation-frontend/pfr-registation-angular/angular.json
+++ b/pfr-registation-frontend/pfr-registation-angular/angular.json
@@ -20,14 +20,17 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/custom-theme.scss",
               "src/styles.css"            
             ],
-            "scripts": []
+            "scripts": ["./node_modules/jquery/dist/jquery.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
             "production": {
