--- a/pfr-registation-frontend/pfr-registation-angular/angular.json
+++ b/pfr-registation-frontend/pfr-registation-angular/angular.json
@@ -25,11 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",           
               "src/custom-theme.scss",
-              "src/styles.css"            
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["./node_modules/jquery/dist/jquery.js",
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
           "configurations": {
