--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.2",
+    "date-fns": "^2.16.1",
     "flex-layout": "^1.0.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
