Formulaire de contact v1 ok

--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -3,8 +3,8 @@ logging:
     name: ${user.home}/Registation/app-registation.log
   level:
     fr:
-      afpa: trace
-    root: info
+      afpa: info
+    root: warn
 
 spring:
   datasource:
