--- a/pfr-registation-frontend/pfr-registation-angular/angular.json
+++ b/pfr-registation-frontend/pfr-registation-angular/angular.json
@@ -20,18 +20,18 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",           
+              "src/styles.css",
               "src/custom-theme.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js"]
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -126,5 +126,8 @@
       }
     }
   },
-  "defaultProject": "pfr-registation-angular"
+  "defaultProject": "pfr-registation-angular",
+  "cli": {
+    "analytics": false
+  }
 }
