--- a/pfr-registation-backend/projet-registation/.gitignore
+++ b/pfr-registation-backend/projet-registation/.gitignore
@@ -1,8 +1,11 @@
 
-target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+/bin/*
+/target/*
+
 
 ### STS ###
 .apt_generated
