--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^10.1.2",
     "@angular/router": "^10.1.2",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@ngtools/webpack": "^10.1.2",
     "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.16.1",
