--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -16,6 +16,21 @@ spring:
   jpa:
     hibernate:      ddl-auto: update    show-sql: false
   
+  mail: 
+    default-encoding: UTF-8 
+    host: smtp.gmail.com 
+    username: registationcdatest@gmail.com 
+    password: bvrqpkjoquzrrysc #app password generated mathieu 
+    port: 587 
+    properties: 
+      mail: 
+        smtp: 
+          auth: true 
+          starttls: 
+            enable: true
+          ssl.trust: smtp.gmail.com  
+    protocol: smtp 
+    test-connection: false
   
   
 # configuration spring-mvc
