--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -38,6 +38,7 @@
     "@angular-devkit/build-angular": "^0.1001.2",
     "@angular/cli": "^10.1.2",
     "@angular/compiler-cli": "^10.1.2",
+    "@angular/localize": "^10.1.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.62",
