Auto stash before merge of "DevAliceAngular" and "ANGULAR"

--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.16.1",
     "flex-layout": "^1.0.1",
     "jquery": "^3.5.1",
+    "localize": "^0.4.7",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
