--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -38,3 +38,7 @@ spring:
     view:
       prefix: /WEB-INF/jsp/
       suffix: .jsp
+      
+registation:
+  token:
+    secret: azertyui #multiple 4 ? taille
