--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -19,9 +19,11 @@
     "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.1.2",
     "@angular/material": "^10.2.1",
+    "@angular/material-moment-adapter": "^10.2.2",
     "@angular/platform-browser": "^10.1.2",
     "@angular/platform-browser-dynamic": "^10.1.2",
     "@angular/router": "^10.1.2",
+    "@auth0/angular-jwt": "^5.0.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngtools/webpack": "^10.1.2",
     "@types/jquery": "^3.5.1",
@@ -30,6 +32,7 @@
     "flex-layout": "^1.0.1",
     "jquery": "^3.5.1",
     "localize": "^0.4.7",
+    "moment": "^2.29.0",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
     "tslib": "^2.0.0",
