--- a/pfr-registation-frontend/pfr-registation-angular/package.json
+++ b/pfr-registation-frontend/pfr-registation-angular/package.json
@@ -11,21 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.2",
-    "@angular/cdk": "^10.2.1",
-    "@angular/common": "^10.1.2",
-    "@angular/compiler": "^10.1.2",
-    "@angular/core": "^10.1.2",
+    "@angular/animations": "^10.1.3",
+    "@angular/cdk": "^10.2.3",
+    "@angular/common": "^10.1.3",
+    "@angular/compiler": "^10.1.3",
+    "@angular/core": "^10.1.3",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.1.2",
-    "@angular/material": "^10.2.1",
+    "@angular/forms": "^10.1.3",
+    "@angular/material": "^10.2.3",
     "@angular/material-moment-adapter": "^10.2.3",
-    "@angular/platform-browser": "^10.1.2",
-    "@angular/platform-browser-dynamic": "^10.1.2",
-    "@angular/router": "^10.1.2",
+    "@angular/platform-browser": "^10.1.3",
+    "@angular/platform-browser-dynamic": "^10.1.3",
+    "@angular/router": "^10.1.3",
     "@auth0/angular-jwt": "^5.0.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ngtools/webpack": "^10.1.2",
+    "@ngtools/webpack": "^10.1.3",
     "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.16.1",
@@ -39,10 +39,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.2",
-    "@angular/cli": "^10.1.2",
-    "@angular/compiler-cli": "^10.1.2",
-    "@angular/localize": "^10.1.2",
+    "@angular-devkit/build-angular": "^0.1001.3",
+    "@angular/cli": "^10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/localize": "^10.1.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.62",
@@ -57,6 +57,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.3"
   }
 }
