--- a/pfr-registation-backend/projet-registation/pom.xml
+++ b/pfr-registation-backend/projet-registation/pom.xml
@@ -11,9 +11,10 @@
 	</parent>
 	<groupId>fr.afpa</groupId>
 	<artifactId>projet-registation</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>projet-registation</name>
 	<description>Projet fil rouge cda 20079 AQ-SU-AV-MA</description>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -45,11 +46,14 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+
+		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
 		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
