--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -8,10 +8,10 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/registation
+    url: jdbc:postgresql://192.168.1.69/registation
     username: registation_user
     password: pwd
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: org.postgresql.Driver
     
   jpa:
     hibernate:      ddl-auto: update    show-sql: false
