--- a/pfr-registation-backend/projet-registation/pom.xml
+++ b/pfr-registation-backend/projet-registation/pom.xml
@@ -20,6 +20,34 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+
+			<properties>
+				<jdbc.url>dbUrl</jdbc.url>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>mathieu</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<jdbc.url>dbUrl</jdbc.url>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>ienien</id>
+			<properties>
+				<jdbc.url>dbUrl</jdbc.url>
+			</properties>
+		</profile>
+	</profiles>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -47,12 +75,15 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901-1.jdbc4</version>
+			<version>42.2.16</version>
 		</dependency>
+
+
+
 
 
 		<dependency>
