--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
       
       profiles: 
     active:
-      - mathieu
+      - dev
       
 ---
    
@@ -66,5 +66,5 @@ spring:  profiles: mathieu
 
 spring:  profiles: ienien
   
-  datasource:    url: jdbc:postgresql://IP-AURELIEN/registation
+  datasource:    url: jdbc:postgresql://192.168.1.43:5432/registation
     driver-class-name: org.postgresql.Driver
