--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -10,12 +10,11 @@ registation:
   token:
     secret: azertyui #multiple 4 ? taille
 
+
+
 spring:
  
-  jpa:
-    hibernate:      ddl-auto: update
-    properties:      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL91Dialect    show-sql: false
+
 
   mail: 
     default-encoding: UTF-8 
@@ -42,17 +41,27 @@ spring:
   datasource:    username: registation_user
     password: pwd
    
-      
+     
       profiles: 
     active:
-      - dev
-      
+      - dev    
 ---
    
+   
+   
 spring:  profiles: dev   
+  
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+      
+      
+    show-sql: false
       
   datasource:
-    url: dbc:mariadb://localhost:3306/registation
+    url: jdbc:mariadb://localhost:3306/registation
     driver-class-name: org.mariadb.jdbc.Driver
 
 ---
@@ -60,10 +69,49 @@ spring:  profiles: dev
 spring:  profiles: mathieu
     datasource:    url: jdbc:postgresql://192.168.1.69:5432/registation
     driver-class-name: org.postgresql.Driver
+    
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL91Dialect
+      
+    show-sql: false
 
+server:
+  port: 8443
+  ssl:
+    enabled: false  
+    key-store-type: PKCS12
+    key-store: registation.p12
+    key-store-password: registation
+    key-alias: registation
+    key-password: registation
 ---
+
+
 
 spring:  profiles: ienien
   
   datasource:    url: jdbc:postgresql://192.168.1.43:5432/registation
     driver-class-name: org.postgresql.Driver
+    
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL91Dialect
+      
+    show-sql: false
+
+server:
+  port: 8443
+  ssl:
+    enabled: false  
+    key-store-type: PKCS12
+    key-store: registation.p12
+    key-store-password: registation
+    key-alias: registation
+    key-password: registation  
