--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -14,8 +14,7 @@ spring:
  
   jpa:
     hibernate:      ddl-auto: update
-    properties:      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL91Dialect    show-sql: false
+       show-sql: false
 
   mail: 
     default-encoding: UTF-8 
@@ -52,18 +51,28 @@ spring:
 spring:  profiles: dev   
       
   datasource:
-    url: dbc:mariadb://localhost:3306/registation
+    url: jdbc:mariadb://localhost:3306/registation
     driver-class-name: org.mariadb.jdbc.Driver
 
 ---
 
 spring:  profiles: mathieu
+  
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL91Dialect
     datasource:    url: jdbc:postgresql://192.168.1.69:5432/registation
     driver-class-name: org.postgresql.Driver
 
 ---
 
 spring:  profiles: ienien
+  
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL91Dialect
   
   datasource:    url: jdbc:postgresql://IP-AURELIEN/registation
     driver-class-name: org.postgresql.Driver
