--- a/pfr-registation-backend/projet-registation/pom.xml
+++ b/pfr-registation-backend/projet-registation/pom.xml
@@ -78,15 +78,19 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.2.16</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.postgresql</groupId> -->
+<!-- 			<artifactId>postgresql</artifactId> -->
+<!-- 			<version>42.2.16</version> -->
+<!-- 		</dependency> -->
 
 
-		<!-- <dependency> <groupId>org.mariadb.jdbc</groupId> <artifactId>mariadb-java-client</artifactId> 
-			<version>2.6.2</version> </dependency> -->
+	<dependency>
+		<groupId>org.mariadb.jdbc</groupId>
+		<artifactId>mariadb-java-client</artifactId>
+<!-- 		<version>2.6.2</version> -->
+	</dependency>
+	
 
 
 
