--- a/pfr-registation-backend/projet-registation/src/main/resources/application.yml
+++ b/pfr-registation-backend/projet-registation/src/main/resources/application.yml
@@ -106,12 +106,12 @@ spring:  profiles: ienien
       
     show-sql: false
 
-server:
-  port: 8443
-  ssl:
-    enabled: false  
-    key-store-type: PKCS12
-    key-store: registation.p12
-    key-store-password: registation
-    key-alias: registation
-    key-password: registation  
+#server:
+#  port: 8443
+#  ssl:
+#    enabled: false  
+#    key-store-type: PKCS12
+#    key-store: registation.p12
+#    key-store-password: registation
+#    key-alias: registation
+#    key-password: registation  
